package greetings;
syntax = 'proto3';

message HelloMsg {
  required string hello = 1;
}
